--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -5,7 +5,15 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "email-validator>=2.3.0",
     "fastapi>=0.128.0",
     "google-genai>=1.57.0",
+    "httpx>=0.28.1",
+    "pydantic>=2.12.5",
+    "pytest>=9.0.2",
+    "pytest-asyncio>=1.3.0",
+    "pytest-cov>=7.0.0",
+    "python-dotenv>=1.2.1",
     "supabase>=2.27.1",
+    "uvicorn>=0.40.0",
 ]
