--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "email-validator>=2.3.0",
     "fastapi>=0.128.0",
+    "google-adk>=1.25.0",
     "google-genai>=1.57.0",
     "httpx>=0.28.1",
     "pydantic>=2.12.5",
@@ -14,6 +15,7 @@ dependencies = [
     "pytest-asyncio>=1.3.0",
     "pytest-cov>=7.0.0",
     "python-dotenv>=1.2.1",
+    "pywin32>=311",
     "supabase>=2.27.1",
     "uvicorn>=0.40.0",
 ]
